Release 1.20.2-pre3 (snapshot)