@@ -4,246 +4,246 @@ import java.util.Optional;
 import java.util.OptionalInt;
 
 public class oy {
-   public static final aew<dnj<?, ?>> a = ot.a("crimson_fungus");
-   public static final aew<dnj<?, ?>> b = ot.a("crimson_fungus_planted");
-   public static final aew<dnj<?, ?>> c = ot.a("warped_fungus");
-   public static final aew<dnj<?, ?>> d = ot.a("warped_fungus_planted");
-   public static final aew<dnj<?, ?>> e = ot.a("huge_brown_mushroom");
-   public static final aew<dnj<?, ?>> f = ot.a("huge_red_mushroom");
-   public static final aew<dnj<?, ?>> g = ot.a("oak");
-   public static final aew<dnj<?, ?>> h = ot.a("dark_oak");
-   public static final aew<dnj<?, ?>> i = ot.a("birch");
-   public static final aew<dnj<?, ?>> j = ot.a("acacia");
-   public static final aew<dnj<?, ?>> k = ot.a("spruce");
-   public static final aew<dnj<?, ?>> l = ot.a("pine");
-   public static final aew<dnj<?, ?>> m = ot.a("jungle_tree");
-   public static final aew<dnj<?, ?>> n = ot.a("fancy_oak");
-   public static final aew<dnj<?, ?>> o = ot.a("jungle_tree_no_vine");
-   public static final aew<dnj<?, ?>> p = ot.a("mega_jungle_tree");
-   public static final aew<dnj<?, ?>> q = ot.a("mega_spruce");
-   public static final aew<dnj<?, ?>> r = ot.a("mega_pine");
-   public static final aew<dnj<?, ?>> s = ot.a("super_birch_bees_0002");
-   public static final aew<dnj<?, ?>> t = ot.a("super_birch_bees");
-   public static final aew<dnj<?, ?>> u = ot.a("swamp_oak");
-   public static final aew<dnj<?, ?>> v = ot.a("jungle_bush");
-   public static final aew<dnj<?, ?>> w = ot.a("azalea_tree");
-   public static final aew<dnj<?, ?>> x = ot.a("mangrove");
-   public static final aew<dnj<?, ?>> y = ot.a("tall_mangrove");
-   public static final aew<dnj<?, ?>> z = ot.a("cherry");
-   public static final aew<dnj<?, ?>> A = ot.a("oak_bees_0002");
-   public static final aew<dnj<?, ?>> B = ot.a("oak_bees_002");
-   public static final aew<dnj<?, ?>> C = ot.a("oak_bees_005");
-   public static final aew<dnj<?, ?>> D = ot.a("birch_bees_0002");
-   public static final aew<dnj<?, ?>> E = ot.a("birch_bees_002");
-   public static final aew<dnj<?, ?>> F = ot.a("birch_bees_005");
-   public static final aew<dnj<?, ?>> G = ot.a("fancy_oak_bees_0002");
-   public static final aew<dnj<?, ?>> H = ot.a("fancy_oak_bees_002");
-   public static final aew<dnj<?, ?>> I = ot.a("fancy_oak_bees_005");
-   public static final aew<dnj<?, ?>> J = ot.a("fancy_oak_bees");
-   public static final aew<dnj<?, ?>> K = ot.a("cherry_bees_005");
+   public static final aex<dnl<?, ?>> a = ot.a("crimson_fungus");
+   public static final aex<dnl<?, ?>> b = ot.a("crimson_fungus_planted");
+   public static final aex<dnl<?, ?>> c = ot.a("warped_fungus");
+   public static final aex<dnl<?, ?>> d = ot.a("warped_fungus_planted");
+   public static final aex<dnl<?, ?>> e = ot.a("huge_brown_mushroom");
+   public static final aex<dnl<?, ?>> f = ot.a("huge_red_mushroom");
+   public static final aex<dnl<?, ?>> g = ot.a("oak");
+   public static final aex<dnl<?, ?>> h = ot.a("dark_oak");
+   public static final aex<dnl<?, ?>> i = ot.a("birch");
+   public static final aex<dnl<?, ?>> j = ot.a("acacia");
+   public static final aex<dnl<?, ?>> k = ot.a("spruce");
+   public static final aex<dnl<?, ?>> l = ot.a("pine");
+   public static final aex<dnl<?, ?>> m = ot.a("jungle_tree");
+   public static final aex<dnl<?, ?>> n = ot.a("fancy_oak");
+   public static final aex<dnl<?, ?>> o = ot.a("jungle_tree_no_vine");
+   public static final aex<dnl<?, ?>> p = ot.a("mega_jungle_tree");
+   public static final aex<dnl<?, ?>> q = ot.a("mega_spruce");
+   public static final aex<dnl<?, ?>> r = ot.a("mega_pine");
+   public static final aex<dnl<?, ?>> s = ot.a("super_birch_bees_0002");
+   public static final aex<dnl<?, ?>> t = ot.a("super_birch_bees");
+   public static final aex<dnl<?, ?>> u = ot.a("swamp_oak");
+   public static final aex<dnl<?, ?>> v = ot.a("jungle_bush");
+   public static final aex<dnl<?, ?>> w = ot.a("azalea_tree");
+   public static final aex<dnl<?, ?>> x = ot.a("mangrove");
+   public static final aex<dnl<?, ?>> y = ot.a("tall_mangrove");
+   public static final aex<dnl<?, ?>> z = ot.a("cherry");
+   public static final aex<dnl<?, ?>> A = ot.a("oak_bees_0002");
+   public static final aex<dnl<?, ?>> B = ot.a("oak_bees_002");
+   public static final aex<dnl<?, ?>> C = ot.a("oak_bees_005");
+   public static final aex<dnl<?, ?>> D = ot.a("birch_bees_0002");
+   public static final aex<dnl<?, ?>> E = ot.a("birch_bees_002");
+   public static final aex<dnl<?, ?>> F = ot.a("birch_bees_005");
+   public static final aex<dnl<?, ?>> G = ot.a("fancy_oak_bees_0002");
+   public static final aex<dnl<?, ?>> H = ot.a("fancy_oak_bees_002");
+   public static final aex<dnl<?, ?>> I = ot.a("fancy_oak_bees_005");
+   public static final aex<dnl<?, ?>> J = ot.a("fancy_oak_bees");
+   public static final aex<dnl<?, ?>> K = ot.a("cherry_bees_005");
 
-   private static dqw.a a(csv $$0, csv $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new dqw.a(dsb.a($$0), new dtd($$2, $$3, $$4), dsb.a($$1), new drh(bga.a($$5), bga.a(0), 3), new dre(1, 0, 1));
+   private static dqy.a a(csx $$0, csx $$1, int $$2, int $$3, int $$4, int $$5) {
+      return new dqy.a(dsd.a($$0), new dtf($$2, $$3, $$4), dsd.a($$1), new drj(bgc.a($$5), bgc.a(0), 3), new drg(1, 0, 1));
    }
 
-   private static dqw.a a() {
-      return a(csw.U, csw.aE, 4, 2, 0, 2).a();
+   private static dqy.a a() {
+      return a(csy.U, csy.aE, 4, 2, 0, 2).a();
    }
 
-   private static dqw.a b() {
-      return a(csw.W, csw.aG, 5, 2, 0, 2).a();
+   private static dqy.a b() {
+      return a(csy.W, csy.aG, 5, 2, 0, 2).a();
    }
 
-   private static dqw.a c() {
-      return a(csw.W, csw.aG, 5, 2, 6, 2).a();
+   private static dqy.a c() {
+      return a(csy.W, csy.aG, 5, 2, 6, 2).a();
    }
 
-   private static dqw.a d() {
-      return a(csw.X, csw.aH, 4, 8, 0, 2);
+   private static dqy.a d() {
+      return a(csy.X, csy.aH, 4, 8, 0, 2);
    }
 
-   private static dqw.a e() {
-      return new dqw.a(dsb.a(csw.U), new dsz(3, 11, 0), dsb.a(csw.aE), new drl(bga.a(2), bga.a(4), 4), new dre(0, 0, 0, OptionalInt.of(4))).a();
+   private static dqy.a e() {
+      return new dqy.a(dsd.a(csy.U), new dtb(3, 11, 0), dsd.a(csy.aE), new drn(bgc.a(2), bgc.a(4), 4), new drg(0, 0, 0, OptionalInt.of(4))).a();
    }
 
-   private static dqw.a f() {
-      return new dqw.a(
-            dsb.a(csw.Z),
-            new dsx(7, 1, 0, new bgk(bfi.<bgd>a().a(bga.a(1), 1).a(bga.a(2), 1).a(bga.a(3), 1).a()), bgj.a(2, 4), bgj.a(-4, -3), bgj.a(-1, 0)),
-            dsb.a(csw.aJ),
-            new drj(bga.a(4), bga.a(0), bga.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new dre(1, 0, 2)
+   private static dqy.a f() {
+      return new dqy.a(
+            dsd.a(csy.Z),
+            new dsz(7, 1, 0, new bgm(bfk.<bgf>a().a(bgc.a(1), 1).a(bgc.a(2), 1).a(bgc.a(3), 1).a()), bgl.a(2, 4), bgl.a(-4, -3), bgl.a(-1, 0)),
+            dsd.a(csy.aJ),
+            new drl(bgc.a(4), bgc.a(0), bgc.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
+            new drg(1, 0, 2)
          )
          .a();
    }
 
-   public static void a(nt<dnj<?, ?>> $$0) {
-      hh<csv> $$1 = $$0.a(je.e);
-      dlz $$2 = dlz.a(
-         csw.x,
-         csw.y,
-         csw.z,
-         csw.A,
-         csw.B,
-         csw.C,
-         csw.D,
-         csw.E,
-         csw.bR,
-         csw.bS,
-         csw.bT,
-         csw.bU,
-         csw.bV,
-         csw.bW,
-         csw.bX,
-         csw.bY,
-         csw.bZ,
-         csw.ca,
-         csw.cb,
-         csw.cc,
-         csw.cd,
-         csw.ce,
-         csw.cf,
-         csw.cg,
-         csw.cB,
-         csw.dS,
-         csw.fb,
-         csw.fc,
-         csw.fd,
-         csw.fe,
-         csw.fm,
-         csw.fq,
-         csw.fC,
-         csw.gt,
-         csw.gu,
-         csw.ku,
-         csw.kv,
-         csw.kA,
-         csw.kB,
-         csw.kD,
-         csw.oi,
-         csw.oo,
-         csw.ox,
-         csw.oz,
-         csw.oA,
-         csw.oB,
-         csw.oC,
-         csw.ru,
-         csw.rv,
-         csw.rw,
-         csw.rx,
-         csw.ry,
-         csw.rz,
-         csw.rA,
-         csw.rC,
-         csw.rD,
-         csw.rE
+   public static void a(nt<dnl<?, ?>> $$0) {
+      hh<csx> $$1 = $$0.a(je.e);
+      dmb $$2 = dmb.a(
+         csy.x,
+         csy.y,
+         csy.z,
+         csy.A,
+         csy.B,
+         csy.C,
+         csy.D,
+         csy.E,
+         csy.bR,
+         csy.bS,
+         csy.bT,
+         csy.bU,
+         csy.bV,
+         csy.bW,
+         csy.bX,
+         csy.bY,
+         csy.bZ,
+         csy.ca,
+         csy.cb,
+         csy.cc,
+         csy.cd,
+         csy.ce,
+         csy.cf,
+         csy.cg,
+         csy.cB,
+         csy.dS,
+         csy.fb,
+         csy.fc,
+         csy.fd,
+         csy.fe,
+         csy.fm,
+         csy.fq,
+         csy.fC,
+         csy.gt,
+         csy.gu,
+         csy.ku,
+         csy.kv,
+         csy.kA,
+         csy.kB,
+         csy.kD,
+         csy.oi,
+         csy.oo,
+         csy.ox,
+         csy.oz,
+         csy.oA,
+         csy.oB,
+         csy.oC,
+         csy.ru,
+         csy.rv,
+         csy.rw,
+         csy.rx,
+         csy.ry,
+         csy.rz,
+         csy.rA,
+         csy.rC,
+         csy.rD,
+         csy.rE
       );
-      ot.a($$0, a, dnw.U, new dof(csw.ow.n(), csw.os.n(), csw.kK.n(), csw.oy.n(), $$2, false));
-      ot.a($$0, b, dnw.U, new dof(csw.ow.n(), csw.os.n(), csw.kK.n(), csw.oy.n(), $$2, true));
-      ot.a($$0, c, dnw.U, new dof(csw.on.n(), csw.oj.n(), csw.op.n(), csw.oy.n(), $$2, false));
-      ot.a($$0, d, dnw.U, new dof(csw.on.n(), csw.oj.n(), csw.op.n(), csw.oy.n(), $$2, true));
+      ot.a($$0, a, dny.U, new doh(csy.ow.n(), csy.os.n(), csy.kK.n(), csy.oy.n(), $$2, false));
+      ot.a($$0, b, dny.U, new doh(csy.ow.n(), csy.os.n(), csy.kK.n(), csy.oy.n(), $$2, true));
+      ot.a($$0, c, dny.U, new doh(csy.on.n(), csy.oj.n(), csy.op.n(), csy.oy.n(), $$2, false));
+      ot.a($$0, d, dny.U, new doh(csy.on.n(), csy.oj.n(), csy.op.n(), csy.oy.n(), $$2, true));
       ot.a(
          $$0,
          e,
-         dnw.r,
-         new dqc(
-            dsb.a(csw.eU.n().a(cwp.e, Boolean.valueOf(true)).a(cwp.f, Boolean.valueOf(false))),
-            dsb.a(csw.eW.n().a(cwp.e, Boolean.valueOf(false)).a(cwp.f, Boolean.valueOf(false))),
+         dny.r,
+         new dqe(
+            dsd.a(csy.eU.n().a(cwr.e, Boolean.valueOf(true)).a(cwr.f, Boolean.valueOf(false))),
+            dsd.a(csy.eW.n().a(cwr.e, Boolean.valueOf(false)).a(cwr.f, Boolean.valueOf(false))),
             3
          )
       );
       ot.a(
          $$0,
          f,
-         dnw.q,
-         new dqc(dsb.a(csw.eV.n().a(cwp.f, Boolean.valueOf(false))), dsb.a(csw.eW.n().a(cwp.e, Boolean.valueOf(false)).a(cwp.f, Boolean.valueOf(false))), 2)
+         dny.q,
+         new dqe(dsd.a(csy.eV.n().a(cwr.f, Boolean.valueOf(false))), dsd.a(csy.eW.n().a(cwr.e, Boolean.valueOf(false)).a(cwr.f, Boolean.valueOf(false))), 2)
       );
-      dsp $$3 = new dsp(0.002F);
-      dsp $$4 = new dsp(0.01F);
-      dsp $$5 = new dsp(0.02F);
-      dsp $$6 = new dsp(0.05F);
-      dsp $$7 = new dsp(1.0F);
-      ot.a($$0, g, dnw.f, a().c());
+      dsr $$3 = new dsr(0.002F);
+      dsr $$4 = new dsr(0.01F);
+      dsr $$5 = new dsr(0.02F);
+      dsr $$6 = new dsr(0.05F);
+      dsr $$7 = new dsr(1.0F);
+      ot.a($$0, g, dny.f, a().c());
       ot.a(
          $$0,
          h,
-         dnw.f,
-         new dqw.a(dsb.a(csw.aa), new dsy(6, 2, 1), dsb.a(csw.aK), new drk(bga.a(0), bga.a(0)), new drd(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+         dny.f,
+         new dqy.a(dsd.a(csy.aa), new dta(6, 2, 1), dsd.a(csy.aK), new drm(bgc.a(0), bgc.a(0)), new drf(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
       );
-      ot.a($$0, i, dnw.f, b().c());
-      ot.a($$0, j, dnw.f, new dqw.a(dsb.a(csw.Y), new dta(5, 2, 2), dsb.a(csw.aI), new drg(bga.a(2), bga.a(0)), new dre(1, 0, 2)).a().c());
-      ot.a($$0, z, dnw.f, f().c());
-      ot.a($$0, K, dnw.f, f().a(List.of($$6)).c());
-      ot.a($$0, k, dnw.f, new dqw.a(dsb.a(csw.V), new dtd(5, 2, 1), dsb.a(csw.aF), new drs(bgj.a(2, 3), bgj.a(0, 2), bgj.a(1, 2)), new dre(2, 0, 2)).a().c());
-      ot.a($$0, l, dnw.f, new dqw.a(dsb.a(csw.V), new dtd(6, 4, 0), dsb.a(csw.aF), new drq(bga.a(1), bga.a(1), bgj.a(3, 4)), new dre(2, 0, 2)).a().c());
-      ot.a($$0, m, dnw.f, d().a(ImmutableList.of(new dsq(0.2F), dsu.b, new dsr(0.25F))).a().c());
-      ot.a($$0, n, dnw.f, e().c());
-      ot.a($$0, o, dnw.f, d().a().c());
+      ot.a($$0, i, dny.f, b().c());
+      ot.a($$0, j, dny.f, new dqy.a(dsd.a(csy.Y), new dtc(5, 2, 2), dsd.a(csy.aI), new dri(bgc.a(2), bgc.a(0)), new drg(1, 0, 2)).a().c());
+      ot.a($$0, z, dny.f, f().c());
+      ot.a($$0, K, dny.f, f().a(List.of($$6)).c());
+      ot.a($$0, k, dny.f, new dqy.a(dsd.a(csy.V), new dtf(5, 2, 1), dsd.a(csy.aF), new dru(bgl.a(2, 3), bgl.a(0, 2), bgl.a(1, 2)), new drg(2, 0, 2)).a().c());
+      ot.a($$0, l, dny.f, new dqy.a(dsd.a(csy.V), new dtf(6, 4, 0), dsd.a(csy.aF), new drs(bgc.a(1), bgc.a(1), bgl.a(3, 4)), new drg(2, 0, 2)).a().c());
+      ot.a($$0, m, dny.f, d().a(ImmutableList.of(new dss(0.2F), dsw.b, new dst(0.25F))).a().c());
+      ot.a($$0, n, dny.f, e().c());
+      ot.a($$0, o, dny.f, d().a().c());
       ot.a(
          $$0,
          p,
-         dnw.f,
-         new dqw.a(dsb.a(csw.X), new dtc(10, 2, 19), dsb.a(csw.aH), new dro(bga.a(2), bga.a(0), 2), new dre(1, 1, 2))
-            .a(ImmutableList.of(dsu.b, new dsr(0.25F)))
+         dny.f,
+         new dqy.a(dsd.a(csy.X), new dte(10, 2, 19), dsd.a(csy.aH), new drq(bgc.a(2), bgc.a(0), 2), new drg(1, 1, 2))
+            .a(ImmutableList.of(dsw.b, new dst(0.25F)))
             .c()
       );
       ot.a(
          $$0,
          q,
-         dnw.f,
-         new dqw.a(dsb.a(csw.V), new dtb(13, 2, 14), dsb.a(csw.aF), new drp(bga.a(0), bga.a(0), bgj.a(13, 17)), new dre(1, 1, 2))
-            .a(ImmutableList.of(new dsn(dsb.a(csw.l))))
+         dny.f,
+         new dqy.a(dsd.a(csy.V), new dtd(13, 2, 14), dsd.a(csy.aF), new drr(bgc.a(0), bgc.a(0), bgl.a(13, 17)), new drg(1, 1, 2))
+            .a(ImmutableList.of(new dsp(dsd.a(csy.l))))
             .c()
       );
       ot.a(
          $$0,
          r,
-         dnw.f,
-         new dqw.a(dsb.a(csw.V), new dtb(13, 2, 14), dsb.a(csw.aF), new drp(bga.a(0), bga.a(0), bgj.a(3, 7)), new dre(1, 1, 2))
-            .a(ImmutableList.of(new dsn(dsb.a(csw.l))))
+         dny.f,
+         new dqy.a(dsd.a(csy.V), new dtd(13, 2, 14), dsd.a(csy.aF), new drr(bgc.a(0), bgc.a(0), bgl.a(3, 7)), new drg(1, 1, 2))
+            .a(ImmutableList.of(new dsp(dsd.a(csy.l))))
             .c()
       );
-      ot.a($$0, s, dnw.f, c().a(ImmutableList.of($$3)).c());
-      ot.a($$0, t, dnw.f, c().a(ImmutableList.of($$7)).c());
-      ot.a($$0, u, dnw.f, a(csw.U, csw.aE, 5, 3, 0, 3).a(ImmutableList.of(new dsr(0.25F))).c());
-      ot.a($$0, v, dnw.f, new dqw.a(dsb.a(csw.X), new dtd(1, 0, 0), dsb.a(csw.aE), new dri(bga.a(2), bga.a(1), 2), new dre(0, 0, 0)).c());
+      ot.a($$0, s, dny.f, c().a(ImmutableList.of($$3)).c());
+      ot.a($$0, t, dny.f, c().a(ImmutableList.of($$7)).c());
+      ot.a($$0, u, dny.f, a(csy.U, csy.aE, 5, 3, 0, 3).a(ImmutableList.of(new dst(0.25F))).c());
+      ot.a($$0, v, dny.f, new dqy.a(dsd.a(csy.X), new dtf(1, 0, 0), dsd.a(csy.aE), new drk(bgc.a(2), bgc.a(1), 2), new drg(0, 0, 0)).c());
       ot.a(
          $$0,
          w,
-         dnw.f,
-         new dqw.a(
-               dsb.a(csw.U),
-               new dsw(4, 2, 0, 3, bgj.a(1, 2)),
-               new dsl(bfi.<dfj>a().a(csw.aM.n(), 3).a(csw.aN.n(), 1)),
-               new drr(bga.a(3), bga.a(0), bga.a(2), 50),
-               new dre(1, 0, 1)
+         dny.f,
+         new dqy.a(
+               dsd.a(csy.U),
+               new dsy(4, 2, 0, 3, bgl.a(1, 2)),
+               new dsn(bfk.<dfl>a().a(csy.aM.n(), 3).a(csy.aN.n(), 1)),
+               new drt(bgc.a(3), bgc.a(0), bgc.a(2), 50),
+               new drg(1, 0, 1)
             )
-            .a(dsb.a(csw.rG))
+            .a(dsd.a(csy.rG))
             .b()
             .c()
       );
       ot.a(
          $$0,
          x,
-         dnw.f,
-         new dqw.a(
-               dsb.a(csw.ab),
-               new dtg(2, 1, 4, bgj.a(1, 4), 0.5F, bgj.a(0, 1), $$1.b(apt.cb)),
-               dsb.a(csw.aL),
-               new drr(bga.a(3), bga.a(0), bga.a(2), 70),
+         dny.f,
+         new dqy.a(
+               dsd.a(csy.ab),
+               new dti(2, 1, 4, bgl.a(1, 4), 0.5F, bgl.a(0, 1), $$1.b(apu.cb)),
+               dsd.a(csy.aL),
+               new drt(bgc.a(3), bgc.a(0), bgc.a(2), 70),
                Optional.of(
-                  new drx(
-                     bgj.a(1, 3),
-                     dsb.a(csw.ac),
-                     Optional.of(new drv(dsb.a(csw.rz), 0.5F)),
-                     new drw($$1.b(apt.cc), hk.a(csv::q, csw.rH, csw.ad), dsb.a(csw.ad), 8, 15, 0.2F)
+                  new drz(
+                     bgl.a(1, 3),
+                     dsd.a(csy.ac),
+                     Optional.of(new drx(dsd.a(csy.rz), 0.5F)),
+                     new dry($$1.b(apu.cc), hk.a(csx::q, csy.rH, csy.ad), dsd.a(csy.ad), 8, 15, 0.2F)
                   )
                ),
-               new dre(2, 0, 2)
+               new drg(2, 0, 2)
             )
             .a(
                List.of(
-                  new dsr(0.125F), new dso(0.14F, 1, 0, new dsh(dsb.a(csw.E.n().a(cxn.c, Boolean.valueOf(true))), cxn.a, bgj.a(0, 4)), 2, List.of(hc.a)), $$4
+                  new dst(0.125F), new dsq(0.14F, 1, 0, new dsj(dsd.a(csy.E.n().a(cxp.c, Boolean.valueOf(true))), cxp.a, bgl.a(0, 4)), 2, List.of(hc.a)), $$4
                )
             )
             .a()
@@ -252,39 +252,39 @@ public class oy {
       ot.a(
          $$0,
          y,
-         dnw.f,
-         new dqw.a(
-               dsb.a(csw.ab),
-               new dtg(4, 1, 9, bgj.a(1, 6), 0.5F, bgj.a(0, 1), $$1.b(apt.cb)),
-               dsb.a(csw.aL),
-               new drr(bga.a(3), bga.a(0), bga.a(2), 70),
+         dny.f,
+         new dqy.a(
+               dsd.a(csy.ab),
+               new dti(4, 1, 9, bgl.a(1, 6), 0.5F, bgl.a(0, 1), $$1.b(apu.cb)),
+               dsd.a(csy.aL),
+               new drt(bgc.a(3), bgc.a(0), bgc.a(2), 70),
                Optional.of(
-                  new drx(
-                     bgj.a(3, 7),
-                     dsb.a(csw.ac),
-                     Optional.of(new drv(dsb.a(csw.rz), 0.5F)),
-                     new drw($$1.b(apt.cc), hk.a(csv::q, csw.rH, csw.ad), dsb.a(csw.ad), 8, 15, 0.2F)
+                  new drz(
+                     bgl.a(3, 7),
+                     dsd.a(csy.ac),
+                     Optional.of(new drx(dsd.a(csy.rz), 0.5F)),
+                     new dry($$1.b(apu.cc), hk.a(csx::q, csy.rH, csy.ad), dsd.a(csy.ad), 8, 15, 0.2F)
                   )
                ),
-               new dre(3, 0, 2)
+               new drg(3, 0, 2)
             )
             .a(
                List.of(
-                  new dsr(0.125F), new dso(0.14F, 1, 0, new dsh(dsb.a(csw.E.n().a(cxn.c, Boolean.valueOf(true))), cxn.a, bgj.a(0, 4)), 2, List.of(hc.a)), $$4
+                  new dst(0.125F), new dsq(0.14F, 1, 0, new dsj(dsd.a(csy.E.n().a(cxp.c, Boolean.valueOf(true))), cxp.a, bgl.a(0, 4)), 2, List.of(hc.a)), $$4
                )
             )
             .a()
             .c()
       );
-      ot.a($$0, A, dnw.f, a().a(List.of($$3)).c());
-      ot.a($$0, B, dnw.f, a().a(List.of($$5)).c());
-      ot.a($$0, C, dnw.f, a().a(List.of($$6)).c());
-      ot.a($$0, D, dnw.f, b().a(List.of($$3)).c());
-      ot.a($$0, E, dnw.f, b().a(List.of($$5)).c());
-      ot.a($$0, F, dnw.f, b().a(List.of($$6)).c());
-      ot.a($$0, G, dnw.f, e().a(List.of($$3)).c());
-      ot.a($$0, H, dnw.f, e().a(List.of($$5)).c());
-      ot.a($$0, I, dnw.f, e().a(List.of($$6)).c());
-      ot.a($$0, J, dnw.f, e().a(List.of($$7)).c());
+      ot.a($$0, A, dny.f, a().a(List.of($$3)).c());
+      ot.a($$0, B, dny.f, a().a(List.of($$5)).c());
+      ot.a($$0, C, dny.f, a().a(List.of($$6)).c());
+      ot.a($$0, D, dny.f, b().a(List.of($$3)).c());
+      ot.a($$0, E, dny.f, b().a(List.of($$5)).c());
+      ot.a($$0, F, dny.f, b().a(List.of($$6)).c());
+      ot.a($$0, G, dny.f, e().a(List.of($$3)).c());
+      ot.a($$0, H, dny.f, e().a(List.of($$5)).c());
+      ot.a($$0, I, dny.f, e().a(List.of($$6)).c());
+      ot.a($$0, J, dny.f, e().a(List.of($$7)).c());
    }
 }
